--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .gradle
 build/
-
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
 # Ignore Gradle GUI config
 gradle-app.setting
 
