--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .gradle
 build/
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+local.properties
+.idea/workspace.xml
+.idea/libraries
 .DS_Store
 # Ignore Gradle GUI config
 gradle-app.setting
