--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,37 @@
-.gradle
-build/
-local.properties
-.idea/workspace.xml
-.idea/libraries
-.DS_Store
-# Ignore Gradle GUI config
-gradle-app.setting
+# Built application files
+/*/build/
+/build/
+# Crashlytics configuations
+com_crashlytics_export_strings.xml
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Gradle generated files
+.gradle/
+
+# Signing files
+.signing/
+
+# User-specific configurations
+.idea/libraries/
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/.name
+.idea/compiler.xml
+.idea/copyright/profiles_settings.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/scopes/scope_settings.xml
+.idea/vcs.xml
+*.iml
+
+# OS-specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
